# radiosondy_landed_waypoints

./: .gitignore  GEMINI.md  README.md  find_chat_id.py  main.py  pyproject.toml  session_name.session  update_version.py
.github/workflows/: ci.yml  release.yml
tests/: test_main.py
